Added extra details to readme

--- a/README.me
+++ b/README.me
@@ -1,12 +1,12 @@
 # Project 3
 
-## Live time validation
+## Quick validation
 
-- Name field :: checks if is more than 2 characters and doesn't contain any numbers. It checks on exit of focus, or press of submit button
-- Email field :: I used a Regex from stackoverflow, but what it is basically validating is that it got the correct characters in place, that it have a @ followed by legal characters and a top level domain at the end
-- Card number :: Checks if the card number is between 13 and 16 numbers
-- Zip code :: Checks if the number is 5 long
-- CVV :: checks if it contains 3 digits
+- Name field :: checks if is more than 2 characters and doesn't contain any numbers. It checks on exit of focus, input changes and/or press of submit button
+- Email field :: I used a Regex from stackoverflow, but what it is basically validating is that it got the correct characters in place, that it have a @ followed by legal characters and a top level domain at the end. It checks on exit of focus, input changes and/or press of submit button
+- Card number :: Checks if the card number is between 13 and 16 numbers. It checks on exit of focus, input changes and/or press of submit button
+- Zip code :: Checks if the number is 5 long. It checks on exit of focus, input changes and/or press of submit button
+- CVV :: checks if it contains 3 digits. It checks on exit of focus, input changes and/or press of submit button
 
 ## Other validation
 
