--- a/README.me
+++ b/README.me
@@ -1,14 +1,22 @@
 # Project 3
+## Languages used
+-- HTML (Provided by TeamTreehouse)
+-- CSS  (Provided by TeamTreehouse)
+-- Pure/Vanilla Javascript (Written by myself)
 
-## Quick validation
+## Quick/Real time validation
+All the checks below are validated on 3 stages
+Stage 1 - blur event. So if you tab through the boxes or use the mouse to switch box it validates on leave.
+Stage 2 - On input change. So everytime you write a character or add a space the validation event will trigger so you get real time data on possible errors you are making
+Stage 3 - On submit. When you click the submit button we validate all the data again. 
 
-- Name field :: checks if is more than 2 characters and doesn't contain any numbers. It checks on exit of focus, input changes and/or press of submit button
-- Email field :: I used a Regex from stackoverflow, but what it is basically validating is that it got the correct characters in place, that it have a @ followed by legal characters and a top level domain at the end. It checks on exit of focus, input changes and/or press of submit button
-- Card number :: Checks if the card number is between 13 and 16 numbers. It checks on exit of focus, input changes and/or press of submit button
-- Zip code :: Checks if the number is 5 long. It checks on exit of focus, input changes and/or press of submit button
-- CVV :: checks if it contains 3 digits. It checks on exit of focus, input changes and/or press of submit button
+- Name field :: checks if is more than 1 characters.
+- Email field :: I used a Regex from stackoverflow, but what it is basically validating is that it got the correct characters in place, that it have a @ followed by legal characters and a top level domain at the end. We also check if the @ is added in the first place to tell the user some of the things it's missing as it writes. 
+- Card number :: Checks if the card number is between 13 and 16 numbers. 
+- Zip code :: Checks if the number is 5 long. 
+- CVV :: checks if it contains 3 digits. 
 
 ## Other validation
 
 - Activites validation on at-least 1 selected
-- Activites validation that you don't select 2 on same date and time
+- Activites validation that you don't select 2 on same date and time (Kept this even though I have disabled it, incase of errors. You can never have too much validation :) )
